bpo-30544: _io._WindowsConsoleIO.write raises the wrong error when WriteConsoleW fails